@@ -1,0 +1,3 @@
+	.globl include_sym
+include_sym:
+	.long	exclude_sym - include_sym
