@@ -1,0 +1,3 @@
+	.globl exclude_sym
+exclude_sym:
+	.long	0
