@@ -1,3 +1,9 @@
+2004-10-16  Daniel Jacobowitz  <dan@debian.org>
+
+	* bfd-in2.h: Regenerate.
+	* bfd.c (struct bfd): Add no_export.
+	* elflink.c (elf_link_add_object_symbols): Handle no_export.
+
 2004-10-15  Alan Modra  <amodra@bigpond.net.au>
 
 	* config.bfd: Whitespace cleanup.
